# forecasting-weather-project

./: .gitignore  README.md  api_client.py  data.py  forecasting.py  my_logger.py  output.csv  pyproject.toml  setup.cfg  tasks.py  utils.py
