[tool.poetry]
name = "forecasting-weather-project"
version = "0.1.0"
description = "Программа для анализа данных по погодным условиям"
authors = ["Irina Fok <fokira@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
pandas = "^1.5.3"
python-dateutil = "^2.8.2"
pytz = "^2022.7.1"
six = "^1.16.0"
pydantic = "^1.10.4"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
